Fixing IE7 labels alignment

--- a/app/assets/scss/custom/_exemplar-specific.scss
+++ b/app/assets/scss/custom/_exemplar-specific.scss
@@ -51,6 +51,9 @@
         width: 100%;
       }
       .panel-indent {
+        .ie7 & {
+          float: none;
+        }
         float: left;
       }
 
